Se agrega mapa y banner responsive

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -14,10 +14,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="../css/contactUs.css">
-    <link rel="stylesheet" href="/scss/styles.css">
+    <link rel="stylesheet" href="../css/contactUs.css" />
+    <link rel="stylesheet" href="/scss/styles.css" />
     <link rel="icon" href="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" />
     <title>Blackstone NC ® | Construction INC</title>
   </head>
@@ -161,16 +164,29 @@
       </section>
     </header>
     <main class="contenedorMain">
-      <!--Mapa-->
       <section class="">
-        <div class="container-fluid">
-          <iframe class="w-100 mapaContact" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7666.706919845325!2d-80.00721985109286!3d36.10681557004353!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885303ff44c9e52b%3A0x5b104004b677c5f1!2s9058%20W%20Market%20St%2C%20Colfax%2C%20NC%2027235!5e0!3m2!1ses-419!2sus!4v1698754815295!5m2!1ses-419!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <!--Franja-->
+        <article class="w-100 articleContact">
+          <div class=" franjaContact">
+            <h5 class="text-start">ContactUs</h5>
+
+          </div>
+        </article>
+        <!--Mapa-->
+        <article class="w-100">
+          <div class="">
+            <iframe
+              class="mapaContact w-100"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7666.706919845325!2d-80.00721985109286!3d36.10681557004353!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885303ff44c9e52b%3A0x5b104004b677c5f1!2s9058%20W%20Market%20St%2C%20Colfax%2C%20NC%2027235!5e0!3m2!1ses-419!2sus!4v1698754815295!5m2!1ses-419!2sus"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </article>
       </section>
     </main>
-    <footer>
-      
-    </footer>
+    <footer></footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -179,5 +195,5 @@
     ></script>
     <script src="/js/precarga.js"></script>
     <script src="/js/index/navbarFixed.js"></script>
-    </body>
+  </body>
 </html>
