--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
       <section>
         <div class="container contenidoPestanas">
           <h3 class="text-center">¡Estamos contratando!</h3>
-          <div class="d-flex flex-column flex-lg-row justify-content-center align-items-lg-baseline text-center">
+          <div class="d-flex flex-column flex-lg-row justify-content-center align-items-lg-baseline text-center contenedorTecnicos">
             <div>
               <h5 class="text-center text-lg-start buscamosTecnicos">Buscamos tencicos para intregrarse a nuestra oficina</h5>
               <p>¡Si tienes perfil técnico y quieres formar parte de la empresa de referencia en el sector de la construccion con madera envíanos tu currículum!</p>
