Se crean pagina requeriments

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -468,7 +468,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/precarga.js"></script>
-    <script src="/js/index/navbarFixed.js"></script>
+    <script src="../js/precarga.js"></script>
+    <script src="../js/index/navbarFixed.js"></script>
   </body>
 </html>
