Se realizan cambios

--- a/pages/carrers/subcontractor-requeriments.html
+++ b/pages/carrers/subcontractor-requeriments.html
@@ -173,19 +173,21 @@
         </article>
         <!--Requerimientos-->
         <article>
-          <div class="container">
-            <p> <a href="/index.html">Blackstone NC ®</a> requiere que antes de que podamos contratar con usted, debemos tener un formulario W-9 y un certificado de seguro en el archivo que nos nombra como "asegurados adicionales" y tiene al menos los siguientes límites:</p>
-              <ul class="list-group">
-                <li class="list-group-item active" aria-current="true">Responsabilidad general: $1,000,000</li>
-                <li class="list-group-item">Responsabilidad Civil Automotriz: $1,000,000</li>
-                <li class="list-group-item">Compensación de trabajadores: $1,000,000/$1,000,000</li>
-                <li class="list-group-item">Paraguas: $5,000,000</li>
-              </ul>
+          <div class="container mt-3 ">
+            <p class="listaTexto"> <a href="/index.html">Blackstone NC ®</a> requiere que antes de que podamos contratar con usted, debemos tener un formulario W-9 y un certificado de seguro en el archivo que nos nombra como "asegurados adicionales" y tiene al menos los siguientes límites</p>
+            <ul class="list-group">
+              <h5>Limites:</h5>
+              <li class="list-group-item bg-danger fw-semibold" aria-current="true">Responsabilidad general: $1,000,000</li>
+              <li class="list-group-item bg-danger fw-semibold">Responsabilidad Civil Automotriz: $1,000,000</li>
+              <li class="list-group-item bg-danger fw-semibold">Compensación de trabajadores: $1,000,000/$1,000,000</li>
+              <li class="list-group-item bg-danger fw-semibold">Paraguas: $5,000,000</li>
+          </ul>
+          
             </div>
         </article>
         <article>
-          <div class="container">
-            <p> Una vez que sea un subcontratista aprobado para Davie Construction Co., los siguientes elementos deben estar archivados y actualizados. Antes de que se realice la solicitud de pago:</p>
+          <div class="container mt-3">
+            <p class="listaTexto mt-3"> Una vez que sea un subcontratista aprobado para Davie Construction Co., los siguientes elementos deben estar archivados y actualizados. Antes de que se realice la solicitud de pago:</p>
             <ol class="list-group list-group-numbered">
               <li class="list-group-item">Acuerdo de Subcontrato firmado.</li>
               <li class="list-group-item">Una exención de gravamen notariada si el monto es de $500.00 o más.</li>
@@ -201,7 +203,7 @@
           </div>
         </article>
         <article>
-          <div class="container">
+          <div class="container mt-3">
             <h5>Sample forms</h5>
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><a href="https://www.irs.gov/pub/irs-pdf/fw9.pdf" target="_blank">W-9 Form</a></li>
