Se crea página requeriments

--- a/pages/carrers/subcontractor-requeriments.html
+++ b/pages/carrers/subcontractor-requeriments.html
@@ -177,24 +177,25 @@
             <p class="listaTexto"> <a href="/index.html">Blackstone NC ®</a> requiere que antes de que podamos contratar con usted, debemos tener un formulario W-9 y un certificado de seguro en el archivo que nos nombra como "asegurados adicionales" y tiene al menos los siguientes límites</p>
             <ul class="list-group">
               <h5>Limites:</h5>
-              <li class="list-group-item bg-danger fw-semibold" aria-current="true">Responsabilidad general: $1,000,000</li>
-              <li class="list-group-item bg-danger fw-semibold">Responsabilidad Civil Automotriz: $1,000,000</li>
-              <li class="list-group-item bg-danger fw-semibold">Compensación de trabajadores: $1,000,000/$1,000,000</li>
-              <li class="list-group-item bg-danger fw-semibold">Paraguas: $5,000,000</li>
+              <li class="list-group-item text-bg-danger fw-semibold" aria-current="true">Responsabilidad general: $1,000,000</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Responsabilidad Civil Automotriz: $1,000,000</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Compensación de trabajadores: $1,000,000/$1,000,000</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Paraguas: $5,000,000</li>
           </ul>
           
             </div>
         </article>
         <article>
           <div class="container mt-3">
+            <h5>Elementos a tener en cuenta:</h5>
             <p class="listaTexto mt-3"> Una vez que sea un subcontratista aprobado para Davie Construction Co., los siguientes elementos deben estar archivados y actualizados. Antes de que se realice la solicitud de pago:</p>
-            <ol class="list-group list-group-numbered">
-              <li class="list-group-item">Acuerdo de Subcontrato firmado.</li>
-              <li class="list-group-item">Una exención de gravamen notariada si el monto es de $500.00 o más.</li>
-              <li class="list-group-item">Una exención de gravamen de segundo o tercer nivel notariada a los proveedores por cualquier monto.</li>
-              <li class="list-group-item">Estamos buscando un paquete llave en mano. Haga que su presentación sea completa en todos los sentidos.</li>
-              <li class="list-group-item">Cuando estamos autorizados a proceder con un proyecto, el Gerente de Proyecto emitirá todas las órdenes de compra y subcontratos en ese proyecto.</li>
-              <li class="list-group-item"> <b>Todas las facturas</b>
+            <ol class="list-group list-group-numbered ">
+              <li class="list-group-item text-bg-danger fw-semibold">Acuerdo de Subcontrato firmado.</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Una exención de gravamen notariada si el monto es de $500.00 o más.</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Una exención de gravamen de segundo o tercer nivel notariada a los proveedores por cualquier monto.</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Estamos buscando un paquete llave en mano. Haga que su presentación sea completa en todos los sentidos.</li>
+              <li class="list-group-item text-bg-danger fw-semibold">Cuando estamos autorizados a proceder con un proyecto, el Gerente de Proyecto emitirá todas las órdenes de compra y subcontratos en ese proyecto.</li>
+              <li class="list-group-item text-bg-danger fw-semibold"> Todas las facturas
                 debe presentarse en el formulario "Solicitud de pago del subcontratista",
                 <b>notariado y recibido en nuestra oficina el día 25 del mes.</b>
                 Si el día 25 cae en un feriado o fin de semana, las solicitudes de pago deben recibirse antes del feriado o fin de semana. Las solicitudes recibidas después del día 25 del mes no serán procesadas para el pago hasta el día 25 del mes siguiente.
@@ -205,7 +206,7 @@
         <article>
           <div class="container mt-3">
             <h5>Sample forms</h5>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush sampleForms fw-bold">
               <li class="list-group-item"><a href="https://www.irs.gov/pub/irs-pdf/fw9.pdf" target="_blank">W-9 Form</a></li>
               <li class="list-group-item"><a href="">Subcontractor Payment Application</a></li>
               <li class="list-group-item"><a href="">Subcontractor Partial Lien Waiver</a></li>
