Se ajustan cambios

--- a/pages/carrers/subcontractor-requeriments.html
+++ b/pages/carrers/subcontractor-requeriments.html
@@ -162,7 +162,7 @@
         </nav>
       </section>
     </header>
-    <main class="contenedorMain">
+    <main class="contenedorMain transition-fade-in">
       <!--Franja y requerimientos-->
       <section>
         <!--Franja-->
@@ -307,6 +307,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="../../js/aparicionSuave.js"></script>
     <script src="../../js/precarga.js"></script>
     <script src="../../js/index/navbarFixed.js"></script>
     </body>
