--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -163,7 +163,7 @@
         </nav>
       </section>
     </header>
-    <main class="contenedorMain">
+    <main class="contenedorMain transition-fade-in">
       <section>
         <!--Franja-->
         <article class="w-100 articleContact">
@@ -470,5 +470,6 @@
     ></script>
     <script src="../js/precarga.js"></script>
     <script src="../js/index/navbarFixed.js"></script>
+    <script src="../js/aparicionSuave.js"></script>
   </body>
 </html>
