Se soluciona inconveniente de botones

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </article>
       </section>
       <!--Pestañas-->
-      <section id="pestanas" class="d-flex flex-columngit flex-xl-row">
+      <section id="pestanas" class="d-flex flex-column flex-xl-row">
         <!--Botones pestañas-->
         <article class="articlePestanas">
           <div
