--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="subcontractor-&-supplier-diversity.html"
+                        href="./pages/carrers/subcontractor-&-supplier-diversity.html"
                         >Subcontractor & Supplier Diversity</a
                       >
                     </li>
