Se agrega semibold

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
           </div>
           <div class="col-lg-4 col-sm-12 text-white my-3 text-center">
-            <p>Blackstone NC Construction INC. ® | 058 W Market Street. Colfax, NC 27235 | Office (336) 497-5756</p>
+            <p class="fw-semibold">Blackstone NC Construction INC. ® | 058 W Market Street. Colfax, NC 27235 | Office (336) 497-5756</p>
             <p class="linksFooter">|<a href="./index.html">Home</a>|<a href="">Projects</a>|<a href="">Aviso legal</a>|<a href="./pages/projects.html">ContactUs</a>|</p>
           </div>
           <div class="col-lg-4 col-sm-12 d-flex justify-content-center align-items-center">
