Se crea Black Stone NC

--- a/pages/avisoLegal.html
+++ b/pages/avisoLegal.html
@@ -226,7 +226,7 @@
         <div class="container mt-3">
           <h5>CONEXIONES CON SITIOS DE TERCEROS</h5>
           <p>
-            <a href="index.html">Blackstone ®</a> no asume responsibilidad
+            <a href="index.html">Black Stone SC®</a> no asume responsibilidad
             alguna por la informacion contenida en las paginas web de terceros a
             las que se pueda acceder por enlaces o buscadores desde nuestras
             paginas. Sin embargo se compromete a retirar enlaces en caso de
@@ -242,14 +242,14 @@
         <div class="container mt-3">
           <h5>CONEXIONES CON SITIOS DE TERCEROS</h5>
           <p>
-            <a href="index.html">Blackstone ®</a> no asume responsibilidad
+            <a href="index.html">Black Stone NC®</a> no asume responsibilidad
             alguna por la informacion contenida en las paginas web de terceros a
             las que se pueda acceder por enlaces o buscadores desde nuestras
             paginas. Sin embargo se compromete a retirar enlaces en caso de
             tener conocimiento de la existencia de contenidos ilicitos o que
             lesionen derechos de terceros. La infomarcion contenida en este
             sitio Web puede contener errores tipograficos, imprecisiones e
-            inexactitudes de los que <a href="index.html">Blackstone ® </a> no
+            inexactitudes de los que <a href="index.html">Black Stone NC® </a> no
             se responsabiliza, tampoco lo hara en el caso de que los mismos
             provengan de paginas de terceros a las que el usuario accede a
             traves de los enlaces colocados en nuestro portal.
@@ -260,7 +260,7 @@
           <p>
             El usuario reconoce y acepta que todos los derechos sobre el
             contenido de este sitio web pertenecen a
-            <a href="index.html">Blackstone ®</a> y que en consecuencia la
+            <a href="index.html">Black Stone NC®</a> y que en consecuencia la
             modificacion, adaptacion, comunicacion publica, distribucion, venta,
             alquier y cualquier otro derecho de propiedad intelectual realizado
             por el usuario sin consentimiento del mismo queda prohibido.
@@ -269,7 +269,7 @@
         <div class="container mt-3">
           <h5>ACTUALIZACION Y MODIFICACION DE LA PAGINA WEB</h5>
           <p>
-            <a href="index.html">Blackstone ®</a> se reserva el derecho a
+            <a href="index.html">Black Stone NC®</a> se reserva el derecho a
             actualizar, modificar o eliminar la informacion de esta pagina web y
             su configuracion sin preaviso. De igual forma podra suspender su
             difunsion total o parcialmente y modificar la estructura o contenido
