se soluciona inconveniente

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       />
     -->
     <link rel="icon" href="./svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" />
-    <title> Home | Blackstone NC ® | Construction INC</title>
+    <title>Blackstone NC ® | Construction INC</title>
   </head>
   <body>
     <!--Precarga de sitio-->
