--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,16 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/scss/styles.css" />
-    <link rel="stylesheet" href="../css/contactUs.css" />
-    <link rel="stylesheet" href="../css/requeriments.css" />
+    <link rel="stylesheet" href="/scss/styles.css">
     <link rel="icon" href="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" />
-    <title>Projects | Blackstone NC ® | Construction INC</title>
+    <title>Blackstone NC ® | Construction INC</title>
   </head>
   <body>
     <!--Precarga de sitio-->
@@ -35,13 +30,14 @@
     </div>
     <!--Header-->
     <header>
+
       <section>
         <nav
-          class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio fw-lighter"
+          class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio"
           data-bs-theme="dark"
         >
           <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.html">
+            <a class="navbar-brand mx-auto" href="/index.html">
               <img
                 src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
                 alt="Logo"
@@ -62,26 +58,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-xl-auto text-center">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
                     class="nav-link dropdown-toggle"
-                    href="./carrers/subcontractors.html"
+                    href="/pages/carrers/subcontractors.html"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Carrers & Subs
+                    Subcontractors
                   </a>
                   <ul class="dropdown-menu">
-                    <li>
-                      <a
-                        class="dropdown-item"
-                        href="./carrers/carrers.html"
-                        >Carrers</a
-                      >
-                    </li>
                     <li>
                       <a
                         class="dropdown-item"
@@ -92,42 +81,39 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./carrers/subcontractor-application.html"
+                        href="/pages/carrers/subcontractor-application.html"
                         >Subcontractor aplications
                       </a>
                     </li>
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./carrers/subcontractor-&-supplier-diversity.html"
+                        href="subcontractor-&-supplier-diversity.html"
                         >Subcontractor & Supplier Diversity</a
                       >
                     </li>
                     <li>
                       <a
                         class="dropdown-item"
-                        href="./carrers/subcontractor-requeriments.html"
+                        href="/pages/carrers/subcontractor-requeriments.html"
                         >Subcontractor Requeriments</a
                       >
                     </li>
                   </ul>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                   <a
-                    class="nav-link dropdown-toggle"
-                    href="./bids/bids.html"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
+                    class="nav-link"
+                    aria-current="page"
+                    href="../pages/bids/bids.html"
+                    >Bids</a
                   >
-                    Bids
-                  </a>
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link"
                     aria-current="page"
-                    href="#"
+                    href="/pages/projects.html"
                     >Projects</a
                   >
                 </li>
@@ -135,7 +121,7 @@
                   <a
                     class="nav-link"
                     aria-current="page"
-                    href="../pages/contact-us.html"
+                    href="/pages/contact-us.html"
                     >Contact us</a
                   >
                 </li>
@@ -303,86 +289,51 @@
               <h5 class="tituloFormContact">Projects</h5>
               <!-- Proyectos-->
               <div class="container text-center mt-4">
+                <!--Virginia-->
                 <div class="d-flex flex-column flex-md-row">
-                  <div class="col container">
-                    <video
-                      src="../video/virginia/virginia.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="virginia"
-                      controls
-                    ></video>
+                  <div class="col container containerVirginia">
+                    <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h5><a href="">Virginia</a></h5>
                   </div>
+                  <!--Raeligh-->
                   <div class="col container">
-                    <video
-                      src="../video/raleigh/raleigh.mp4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Raleigh"
-                      controls
-                    ></video>
+                    <iframe class="rounded mx-auto d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/RPY3S89q7RQ?si=Zr79F4kTvtypu9GA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h5><a href="">Raleigh</a></h5>
                   </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row">
+                  <!--Brightwood-->
                   <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
+                    <iframe class="rounded mx-auto d-block w-100" width="560" height="315" src="https://www.youtube.com/embed/r6e4NZI7bRc?si=h8UaWeoVJ3ggPKhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h5><a href="">Brightwood</a></h5>
                   </div>
                   <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
+                    <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h5><a href="">Project 4</a></h5>
                   </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row">
-                  <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
-                    <h5><a href="">Project 5</a></h5>
+                <!--
+                  <div class="d-flex flex-column flex-md-row">
+                    <div class="col container">
+                      <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <h5><a href="">Project 5</a></h5>
+                    </div>
+                    <div class="col container">
+                      <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <h5><a href="">Project 6</a></h5>
+                    </div>
                   </div>
-                  <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
-                    <h5><a href="">Project 6</a></h5>
+                  <div class="d-flex flex-column flex-md-row">
+                    <div class="col container">
+                      <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <h5><a href="">Project 7</a></h5>
+                    </div>
+                    <div class="col container">
+                      <iframe class="rounded mx-auto d-block w-100"  width="560" height="315" src="https://www.youtube.com/embed/MBSEaOgmajg?si=yxj9j_RJg6aKs9_6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <h5><a href="">Project 8</a></h5>
+                    </div>
                   </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row">
-                  <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
-                    <h5><a href="">Project 7</a></h5>
-                  </div>
-                  <div class="col container">
-                    <video
-                      src="../video/brightwood/A20D9556-4000-4620-A6DF-C5815EA712EF.MP4"
-                      class="rounded mx-auto d-block w-100"
-                      alt="Brightwood"
-                      controls
-                    ></video>
-                    <h5><a href="">Project 8</a></h5>
-                  </div>
-                </div>
+                -->
               </div>
             </div>
           </div>
@@ -519,8 +470,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/aparicionSuave.js"></script>
     <script src="/js/precarga.js"></script>
     <script src="/js/index/navbarFixed.js"></script>
-  </body>
+    </body>
 </html>
