Se agregan propiedades

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/scss/styles.css">
+    <link rel="stylesheet"  href="../css/requeriments.css"/>
+    <link rel="stylesheet" href="../css/contactUs.css"/>
     <link rel="icon" href="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" />
     <title>Blackstone NC ® | Construction INC</title>
   </head>
@@ -33,7 +35,7 @@
 
       <section>
         <nav
-          class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio"
+          class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio fw-light"
           data-bs-theme="dark"
         >
           <div class="container-fluid">
@@ -470,6 +472,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="../js/aparicionSuave.js"></script>
     <script src="/js/precarga.js"></script>
     <script src="/js/index/navbarFixed.js"></script>
     </body>
