Images, Htmls (brightwood, raleigh, virginia)

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -321,7 +321,7 @@
                     ></iframe>
                     <h5><a href="./projects/virgina.html">Virginia</a></h5>
                   </div>
-                  <!--Raeligh-->
+                  <!--Raleigh-->
                   <div class="col container">
                     <iframe
                       class="rounded mx-auto d-block w-100"
@@ -333,7 +333,7 @@
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                       allowfullscreen
                     ></iframe>
-                    <h5><a href="">Raleigh</a></h5>
+                    <h5><a href="./projects/raleigh.html">Raleigh</a></h5>
                   </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row">
@@ -349,7 +349,7 @@
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                       allowfullscreen
                     ></iframe>
-                    <h5><a href="">Brightwood</a></h5>
+                    <h5><a href="./projects/brightwood.html">Brightwood</a></h5>
                   </div>
                   <div class="col container">
                     <iframe
