--- a/pages/projects/virgina.html
+++ b/pages/projects/virgina.html
@@ -221,10 +221,8 @@
                     <div>
                       <h5 class="text-bg-danger">Other projects</h5>
                       <ul class="list-group list-group-flush otherProjects">
-                        <li class="list-group-item"><a href="">Raleigh</a></li>
-                        <li class="list-group-item">
-                          <a href="">Brightwood</a>
-                        </li>
+                        <li class="list-group-item"><a href="./raleigh.html">Raleigh</a></li>
+                        <li class="list-group-item"><a href="./brightwood.html">Brightwood</a></li>
                         <li class="list-group-item"><a href="">Eastwood</a></li>
                         <li class="list-group-item"><a href="">DrHorton</a></li>
                         <li class="list-group-item"><a href="">Windsor</a></li>
